--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -3,6 +3,8 @@ name: ROMROM-Android-CICD
 on:
   push:
     branches: ["deploy"]
+  repository_dispatch:
+    types: [deploy-all]
 
 jobs:
   build-android:
