자동 버전관리 및 CHANGLOGmd 업데이트 기능 추가 필요 : feat : cicd deploy 자동 트리거 로직 변경 https://github.com/TEAM-ROMROM/RomRom-FE/issues/170

--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -3,8 +3,10 @@ name: ROMROM-Android-CICD
 on:
   push:
     branches: ["deploy"]
-  repository_dispatch:
-    types: [deploy-all]
+  workflow_run:
+    workflows: ["CHANGELOG 자동 업데이트"]
+    types: [completed]
+    branches: [main]
 
 jobs:
   build-android:
