--- a/.github/workflows/ROMROM-FILE-AUTO-UPLOAD.yaml
+++ b/.github/workflows/ROMROM-FILE-AUTO-UPLOAD.yaml
@@ -3,8 +3,10 @@ name: 프로젝트 설정 파일 관리
 on:
   push:
     branches: ["deploy"]
-  repository_dispatch:
-    types: [ deploy-all ]
+  workflow_run:
+    workflows: ["CHANGELOG 자동 업데이트"]
+    types: [completed]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
