--- a/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
@@ -3,8 +3,10 @@ name: Project-iOS-TestFlight-Deploy
 on:
   push:
     branches: ["deploy"]
-  repository_dispatch:
-    types: [ deploy-all ]
+  workflow_run:
+    workflows: ["CHANGELOG 자동 업데이트"]
+    types: [completed]
+    branches: [main]
   workflow_dispatch:
 
 env:
