물품 상세 설명 화면 스켈레톤 처리 : feat : 등록된 물건 목록 스켈레톤 처리  https://github.com/TEAM-ROMROM/RomRom-FE/issues/131

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_svg: ^2.0.17
   json_annotation: ^4.8.1
   playing_cards_layouts: ^1.0.1
+  skeletonizer: ^1.4.3
 
 dev_dependencies:
   flutter_test:
