자동 버전관리 및 CHANGLOGmd 업데이트 기능 추가 필요 : fix : auto merge 에 대한 디버깅 로직 강화 및 수동 실행 기능 추가 https://github.com/TEAM-ROMROM/RomRom-FE/issues/170

--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -7,6 +7,7 @@ on:
     workflows: ["CHANGELOG 자동 업데이트"]
     types: [completed]
     branches: [main]
+  workflow_dispatch:  # 수동 실행 옵션 추가
 
 jobs:
   build-android:
