--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -13,6 +13,8 @@ jobs:
   build-android:
     name: Build Android APK
     runs-on: ubuntu-latest
+    # CHANGELOG 워크플로우가 성공한 경우에만 실행
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name != 'workflow_run' }}
 
     steps:
       # Repository 체크아웃 및 목록 출력
