--- a/.github/workflows/ROMROM-FILE-AUTO-UPLOAD.yaml
+++ b/.github/workflows/ROMROM-FILE-AUTO-UPLOAD.yaml
@@ -13,6 +13,8 @@ jobs:
   config-files-management:
     name: 설정 파일 관리
     runs-on: ubuntu-latest
+    # CHANGELOG 워크플로우가 성공한 경우에만 실행
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name != 'workflow_run' }}
 
     steps:
       - name: 코드 체크아웃
