--- a/lib/icons/config.json
+++ b/lib/icons/config.json
@@ -7,48 +7,6 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "87b98ed9bc5d88ce277b470201a5ee79",
-      "css": "cancel",
-      "code": 59395,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M95.8 16.4C73.8-5.5 38.3-5.5 16.4 16.4-5.5 38.3-5.5 73.8 16.4 95.8L397.5 476.8 16.4 857.8C-5.5 879.7-5.5 915.2 16.4 937.1 38.3 959 73.9 959 95.8 937.1L476.8 556.1 857.8 937.1C879.7 959 915.2 959 937.1 937.1 959 915.2 959 879.7 937.1 857.8L556.1 476.8 937.1 95.8C959 73.8 959 38.3 937.1 16.4 915.2-5.5 879.7-5.5 857.8 16.4L476.8 397.5 95.8 16.4Z",
-        "width": 1000
-      },
-      "search": [
-        "cancel"
-      ]
-    },
-    {
-      "uid": "b09027f5bc5a5a3e90703c2c1b9aaf29",
-      "css": "location",
-      "code": 59396,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M118 118C193.5 42.4 296 0 402.8 0 509.6 0 612 42.4 687.6 118 763.1 193.5 805.6 296 805.6 402.8 805.6 448.4 800.7 488.5 788.2 526.3 775.6 564.3 755.9 598 728.7 632 728.4 632.4 728 632.8 727.7 633.2L434.3 971.7C426.4 980.9 414.9 986.1 402.8 986.1 390.7 986.1 379.2 980.9 371.3 971.7L77.9 633.2C77.5 632.8 77.2 632.4 76.9 632 49.7 598 30 564.3 17.4 526.3 4.8 488.5 0 448.4 0 402.8 0 296 42.4 193.5 118 118ZM402.8 83.3C318.1 83.3 236.8 117 176.9 176.9 117 236.8 83.3 318.1 83.3 402.8 83.3 442.5 87.6 473.1 96.5 500.1 105.3 526.6 119.3 551.6 141.4 579.2L402.8 880.8 664.2 579.2C686.2 551.6 700.3 526.6 709.1 500.1 718 473.1 722.2 442.5 722.2 402.8 722.2 318.1 688.6 236.8 628.7 176.9 568.8 117 487.5 83.3 402.8 83.3ZM402.8 309C351 309 309 351 309 402.8 309 454.6 351 496.5 402.8 496.5 454.6 496.5 496.5 454.6 496.5 402.8 496.5 351 454.6 309 402.8 309ZM225.7 402.8C225.7 305 305 225.7 402.8 225.7 500.6 225.7 579.9 305 579.9 402.8 579.9 500.6 500.6 579.9 402.8 579.9 305 579.9 225.7 500.6 225.7 402.8Z",
-        "width": 833
-      },
-      "search": [
-        "location"
-      ]
-    },
-    {
-      "uid": "137deef6305d3ed4180b1adc78cbf3bd",
-      "css": "dotsVertical",
-      "code": 59397,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M136.4 0C79.9 0 34.1 45.8 34.1 102.3 34.1 158.8 79.9 204.5 136.4 204.5 192.8 204.5 238.6 158.8 238.6 102.3 238.6 45.8 192.8 0 136.4 0ZM136.4 397.7C79.9 397.7 34.1 443.5 34.1 500 34.1 556.5 79.9 602.3 136.4 602.3 192.8 602.3 238.6 556.5 238.6 500 238.6 443.5 192.8 397.7 136.4 397.7ZM136.4 795.5C79.9 795.5 34.1 841.2 34.1 897.7 34.1 954.2 79.9 1000 136.4 1000 192.8 1000 238.6 954.2 238.6 897.7 238.6 841.2 192.8 795.5 136.4 795.5Z",
-        "width": 273
-      },
-      "search": [
-        "dots-vertical"
-      ]
-    },
-    {
       "uid": "fdc4703a53055d2d9bccf98c0f535bc4",
       "css": "currentLocation",
       "code": 59404,
@@ -133,20 +91,6 @@
       ]
     },
     {
-      "uid": "7be4771a3a01f43f3cb452a9a543060b",
-      "css": "navigateBefore",
-      "code": 59393,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M533 36.9C550.2 55.1 549.5 83.8 531.3 101.1L111.5 500 531.3 898.9C549.5 916.2 550.2 944.9 533 963.1 515.7 981.3 486.9 982.1 468.7 964.8L14.1 533C5.1 524.4 0 512.5 0 500 0 487.5 5.1 475.6 14.1 467L468.7 35.2C486.9 17.9 515.7 18.7 533 36.9Z",
-        "width": 545
-      },
-      "search": [
-        "navigatebefore"
-      ]
-    },
-    {
       "uid": "3b855c543a50e63f76af0e7c3ad2d00b",
       "css": "addItemPlus",
       "code": 59394,
@@ -158,34 +102,6 @@
       },
       "search": [
         "additemplus"
-      ]
-    },
-    {
-      "uid": "0eb2bbd2e4116ffa3f324f9ab46a4121",
-      "css": "itemRegisterHeart",
-      "code": 59435,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M174.9 94.5C304.2-16 471.4 5.7 583 106.7 694.5 5.6 859.8-14.6 990.7 94.2 1132.3 211.8 1149.3 412.5 1040.3 552.8 998.2 606.9 915.8 688.5 836.2 763.7 755.8 839.6 675.6 911.3 636 946.4 632.1 949.8 627.4 954.1 622.9 957.4 617.9 961.2 611 965.6 601.9 968.3 589.6 972 576.4 972 564.1 968.3 555.1 965.6 548.2 961.2 543.2 957.4 538.8 954.1 534 949.8 530.1 946.4 490.5 911.3 410.2 839.6 329.8 763.7 250.2 688.5 167.9 606.9 125.8 552.8 16.4 412 36.4 212.8 174.9 94.5ZM576.1 928.5C578.3 929.1 580.7 929.4 583 929.4 580.7 929.4 578.2 929 576 928.4L576.1 928.5ZM589.9 928.4C587.7 929 585.4 929.4 583 929.4 585.4 929.4 587.8 929.1 590 928.5L589.9 928.4Z",
-        "width": 1167
-      },
-      "search": [
-        "itemregisterheart"
-      ]
-    },
-    {
-      "uid": "cebdf5e6b4f712094e5fbd8083836294",
-      "css": "onboardingProgressCheck",
-      "code": 59436,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M1300.8 33.8C1344.2 78.9 1344.2 151.9 1300.8 197L560 966.2C538.3 988.8 508.5 1001 477.8 999.9 447.1 998.9 418.1 984.6 397.9 960.6L27.5 521C-12.9 473.1-8.2 400.2 37.9 358.2 84.1 316.3 154.3 321.1 194.7 369.1L486.9 715.8 1143.7 33.8C1187-11.3 1257.4-11.3 1300.8 33.8Z",
-        "width": 1333
-      },
-      "search": [
-        "onboardingprogresscheck"
       ]
     },
     {
@@ -203,20 +119,6 @@
       ]
     },
     {
-      "uid": "0a2c049e4bc3ed2386ba508cc29b2a57",
-      "css": "detailView",
-      "code": 59422,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M107.7 936.1C85.4 957.2 50.3 956.3 29.2 934.1 8.1 911.8 9 876.7 31.2 855.6L405.5 500 31.2 144.4 27.2 140.3C8.9 118.9 9.4 86.8 29.2 65.9 49 45.1 81.1 42.9 103.4 60.2L107.7 63.9 524.4 459.7C535.4 470.2 541.7 484.8 541.7 500 541.7 515.2 535.4 529.8 524.4 540.2L107.7 936.1Z",
-        "width": 556
-      },
-      "search": [
-        "detailview"
-      ]
-    },
-    {
       "uid": "46fd8adfd6ecfb4a5e58967a9c5a6818",
       "css": "romromRLogoText",
       "code": 59453,
@@ -228,6 +130,104 @@
       },
       "search": [
         "icon"
+      ]
+    },
+    {
+      "uid": "f6580352d08959456f1aba5038097d18",
+      "css": "cancel",
+      "code": 59424,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M819.5 125.6C837 108.1 865.4 108.1 882.9 125.6 900.4 143.2 900.4 171.6 882.9 189.1L578.1 493.9 882.9 798.7C900.4 816.2 900.4 844.7 882.9 862.2 865.4 879.7 837 879.7 819.5 862.2L514.6 557.3 209.8 862.2C192.3 879.7 163.9 879.7 146.4 862.2 128.9 844.7 128.9 816.2 146.4 798.7L451.2 493.9 146.4 189.1C128.9 171.6 128.9 143.2 146.4 125.6 163.9 108.1 192.3 108.1 209.8 125.6L514.6 430.4 819.5 125.6Z",
+        "width": 1000
+      },
+      "search": [
+        "cancel"
+      ]
+    },
+    {
+      "uid": "aab12ac34d786019442b42d61a477f36",
+      "css": "detailView",
+      "code": 59425,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M251.4 65.9C272.6 43.7 307.7 42.8 329.9 63.9L746.6 459.8C757.6 470.2 763.9 484.8 763.9 500 763.9 515.2 757.6 529.8 746.6 540.3L329.9 936.1C307.7 957.2 272.6 956.3 251.4 934.1 230.3 911.8 231.2 876.7 253.4 855.6L627.7 500 253.4 144.4C231.2 123.3 230.3 88.2 251.4 65.9Z",
+        "width": 1000
+      },
+      "search": [
+        "detailview"
+      ]
+    },
+    {
+      "uid": "2cb9c9d260feb21c61ec94925afbface",
+      "css": "dotsVertical",
+      "code": 59426,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M500 716.7C541.4 716.7 575 750.2 575 791.7 575 833.1 541.4 866.7 500 866.7 458.6 866.7 425 833.1 425 791.7 425 750.2 458.6 716.7 500 716.7ZM500 425C541.4 425 575 458.6 575 500 575 541.4 541.4 575 500 575 458.6 575 425 541.4 425 500 425 458.6 458.6 425 500 425ZM500 133.3C541.4 133.3 575 166.9 575 208.3 575 249.8 541.4 283.3 500 283.3 458.6 283.3 425 249.8 425 208.3 425 166.9 458.6 133.3 500 133.3Z",
+        "width": 1000
+      },
+      "search": [
+        "dotsvertical"
+      ]
+    },
+    {
+      "uid": "afdda493113888ee758ca5cc8bd18dfb",
+      "css": "itemRegisterHeart",
+      "code": 59427,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M156.9 160.6C265.7 67.6 407.5 88.2 499.7 177.5 591.7 88.2 732 68.7 842.3 160.4 959.1 257.4 973.2 422.9 883.2 538.7 847.7 584.3 777.7 653.7 709.4 718.2 640.6 783.2 571.9 844.6 538 874.6 534.5 877.7 530.8 881 527.4 883.5 523.7 886.3 518.9 889.4 512.8 891.2 504.3 893.7 495.1 893.7 486.6 891.2 480.5 889.4 475.8 886.3 472 883.5 468.6 881 464.9 877.7 461.4 874.6 427.5 844.6 358.8 783.2 290 718.2 221.7 653.7 151.7 584.3 116.3 538.7 26 422.6 42.5 258.3 156.9 160.6Z",
+        "width": 1000
+      },
+      "search": [
+        "itemregisterheart"
+      ]
+    },
+    {
+      "uid": "9bf480fe36b0fa00fe8b994e447326a9",
+      "css": "location",
+      "code": 59428,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M794.9 416.7C794.9 338.5 763.8 263.5 708.5 208.2 653.2 152.9 578.2 121.8 500 121.8 421.8 121.8 346.8 152.9 291.5 208.2 236.2 263.5 205.1 338.5 205.1 416.7 205.1 453.4 209 481.7 217.3 506.5 225.5 531.2 238.6 554.4 259.2 580.1L500 857.9 740.8 580C761.4 554.3 774.5 531.2 782.7 506.5 791 481.7 794.9 453.4 794.9 416.7ZM586.5 416.7C586.5 368.9 547.7 330.1 500 330.1 452.2 330.1 413.4 368.9 413.4 416.7 413.4 464.4 452.2 503.2 500 503.2 547.8 503.2 586.5 464.4 586.5 416.7ZM663.4 416.7C663.4 506.9 590.2 580.1 500 580.1 409.7 580.1 336.5 506.9 336.5 416.7 336.5 326.4 409.7 253.2 500 253.2 590.2 253.2 663.4 326.4 663.4 416.7ZM871.8 416.7C871.8 458.8 867.3 495.8 855.7 530.7 844.1 565.8 825.9 597 800.8 628.3 800.5 628.6 800.2 629 799.9 629.4L529 941.9C521.7 950.3 511.1 955.1 500 955.1 488.8 955.1 478.2 950.3 470.9 941.9L200.1 629.4C199.8 629 199.4 628.7 199.1 628.3 174 597 155.9 565.8 144.3 530.7 132.7 495.8 128.2 458.8 128.2 416.7 128.2 318.1 167.4 223.5 237.1 153.8 306.8 84.1 401.4 44.9 500 44.9 598.6 44.9 693.2 84.1 762.9 153.8 832.6 223.5 871.8 318.1 871.8 416.7Z",
+        "width": 1000
+      },
+      "search": [
+        "location"
+      ]
+    },
+    {
+      "uid": "d15f75f4734b81b936f7a508a0f37660",
+      "css": "navigateBefore",
+      "code": 59429,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M679.6 74C696.3 58.1 722.7 58.8 738.5 75.5 754.4 92.2 753.7 118.5 737 134.4L352.1 500 737 865.6C753.7 881.5 754.4 907.8 738.5 924.5 722.7 941.2 696.3 941.9 679.6 926L263 530.2C254.7 522.3 250 511.4 250 500 250 488.6 254.7 477.7 263 469.8L679.6 74Z",
+        "width": 1000
+      },
+      "search": [
+        "navigatebefore"
+      ]
+    },
+    {
+      "uid": "4b75be2cc0a405f2eaaa64a75cc33ff9",
+      "css": "onboardingProgressCheck",
+      "code": 59430,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M785.4 315.2C804.9 335.5 804.9 368.4 785.4 388.6L452 734.8C442.2 745 428.8 750.5 415 750 401.2 749.5 388.2 743.1 379 732.3L212.4 534.5C194.2 512.9 196.3 480.1 217.1 461.2 237.9 442.3 269.4 444.5 287.6 466.1L419.1 622.1 714.6 315.2C734.2 294.9 765.8 294.9 785.4 315.2Z",
+        "width": 1000
+      },
+      "search": [
+        "onboardingprogresscheck"
       ]
     }
   ]
