--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   permission_handler: ^11.3.1
   provider: ^6.1.5
   flutter_riverpod: ^2.6.1
+  shadex: ^1.0.2
   shared_preferences: ^2.5.2
   flutter_svg: ^2.0.17
   json_annotation: ^4.8.1
