지도 핀 추가 및 위치 API 연동 처리 : fix : 버전 관리 로직 업데이트 https://github.com/TEAM-ROMROM/RomRom-FE/issues/192

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -11,8 +11,6 @@ reviews:
   auto_review:
     enabled: true
     drafts: false
-    base_branches:
-      - "main"
-      - "deploy"
+    base_branches: ["main"]
 chat:
   auto_reply: true
