--- a/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
@@ -12,6 +12,7 @@ on:
 env:
   FLUTTER_VERSION: "3.27.3"
   XCODE_VERSION: "16.3"
+  PROJECT_TYPE: "flutter"
 
 jobs:
   prepare-build:
@@ -23,7 +24,7 @@ jobs:
     outputs:
       version: ${{ steps.current_version.outputs.version }}
       build_number: ${{ steps.current_version.outputs.build_number }}
-      current_version: ${{ steps.current_version.outputs.current_version }}
+      project_type: ${{ steps.current_version.outputs.project_type }}
 
     steps:
       - name: Checkout repository
@@ -80,20 +81,46 @@ jobs:
           gem install cocoapods
           cd ios && pod install
 
-      # 현재 버전 정보 읽기
-      - name: Get current version
+      # 버전 관리 스크립트 권한 설정
+      - name: 버전 관리 스크립트 권한 설정
+        run: |
+          chmod +x ./.github/scripts/version-manager.sh
+          chmod +x ./.github/scripts/changelog_parser.py
+          chmod +x ./.github/scripts/changelog_generator.py
+
+      # version-manager.sh를 사용하여 현재 버전 정보 가져오기
+      - name: 현재 버전 정보 가져오기
         id: current_version
         run: |
-          CURRENT_VERSION=$(grep 'version:' pubspec.yaml | sed 's/version: //' | tr -d ' ')
-          VERSION=$(echo $CURRENT_VERSION | cut -d'+' -f1)
-          BUILD_NUMBER=$(echo $CURRENT_VERSION | cut -d'+' -f2)
-          echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+          # 버전 관리 스크립트로 버전 정보 가져오기
+          VERSION=$(./.github/scripts/version-manager.sh get | tail -n 1)
+          echo "📋 버전 정보: $VERSION"
+          
+          # iOS 빌드를 위한 빌드 번호 생성 (CI 환경에서는 GITHUB_RUN_NUMBER 활용)
+          if [ -n "$GITHUB_RUN_NUMBER" ]; then
+            BUILD_NUMBER=$GITHUB_RUN_NUMBER
+          else
+            # CI 환경이 아닌 경우 타임스탬프로 대체
+            BUILD_NUMBER=$(date +%s)
+          fi
+          
+          # 결과 출력
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
-          echo "현재 버전: $CURRENT_VERSION"
+          echo "project_type=${{ env.PROJECT_TYPE }}" >> $GITHUB_OUTPUT
+          
+          echo "📋 현재 버전: $VERSION (빌드번호: $BUILD_NUMBER)"
+          echo "🔧 프로젝트 타입: ${{ env.PROJECT_TYPE }}"
+          
+          # 환경변수로도 설정 (스크립트에서 사용)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "TODAY=$(date '+%Y-%m-%d')" >> $GITHUB_ENV
+          echo "TIMESTAMP=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
+          echo "PROJECT_TYPE=${{ env.PROJECT_TYPE }}" >> $GITHUB_ENV
+          echo "PR_NUMBER=0" >> $GITHUB_ENV
 
-      # CHANGELOG.json에서 현재 버전의 릴리즈 노트 추출
-      - name: Extract release notes from CHANGELOG.json
+      # CHANGELOG.json에서 릴리즈 노트 추출 - changelog_generator.py 사용
+      - name: 릴리즈 노트 생성
         id: release_notes
         run: |
           VERSION="${{ steps.current_version.outputs.version }}"
@@ -101,47 +128,11 @@ jobs:
           if [ -f "CHANGELOG.json" ]; then
             echo "📄 CHANGELOG.json에서 v$VERSION 릴리즈 노트 추출 중..."
             
-            # Python으로 JSON에서 해당 버전의 정보 추출
-            python3 << PYTHON_SCRIPT > final_release_notes.txt
-          import json
-          import sys
-          
-          try:
-              with open('CHANGELOG.json', 'r', encoding='utf-8') as f:
-                  data = json.load(f)
-              
-              version = "$VERSION"
-              found = False
-              
-              for release in data['releases']:
-                  if release['version'] == version:
-                      found = True
-                      
-                      # AI가 생성한 모든 카테고리를 동적으로 처리
-                      for category_key, items in release['parsed_changes'].items():
-                          if items:
-                              # 새 형식인지 기존 형식인지 확인
-                              if isinstance(items, dict) and 'title' in items and 'items' in items:
-                                  title = items['title']
-                                  actual_items = items['items']
-                              else:
-                                  title = category_key.replace('_', ' ').title()
-                                  actual_items = items
-                              
-                              print(f"**{title}**")
-                              for item in actual_items:
-                                  if item.strip():
-                                      print(f"• {item}")
-                              print()
-                      
-                      break
-              
-              if not found:
-                  print(f"v{version} 업데이트")
-                  
-          except Exception as e:
-              print(f"v{version} 업데이트")
-          PYTHON_SCRIPT
+            # 체인지로그 생성기 실행
+            python3 ./.github/scripts/changelog_generator.py
+            
+            # 현재 버전에 해당하는 부분만 추출하여 릴리즈 노트 생성
+            sed -n "/## \[$VERSION\]/,/---/p" CHANGELOG.md | sed '$d' > final_release_notes.txt
             
             if [ -s final_release_notes.txt ]; then
               echo "✅ 릴리즈 노트 추출 성공!"
@@ -155,22 +146,8 @@ jobs:
               echo "RELEASE_NOTES_FOUND=false" >> $GITHUB_ENV
               echo "v$VERSION 업데이트" > final_release_notes.txt
             fi
-          elif [ -f "CHANGELOG.md" ]; then
-            echo "📄 CHANGELOG.md에서 v$VERSION 변경사항 추출 중..."
-            sed -n "/## \[$VERSION\]/,/## \[/p" CHANGELOG.md | sed '$d' > current_release_notes.txt
-            tail -n +2 current_release_notes.txt > release_notes_clean.txt
-            sed '/^$/d; /^---$/d' release_notes_clean.txt > final_release_notes.txt
-            if [ -s final_release_notes.txt ]; then
-              echo "추출된 변경사항:"
-              cat final_release_notes.txt
-              echo "RELEASE_NOTES_FOUND=true" >> $GITHUB_ENV
-            else
-              echo "현재 버전의 변경사항을 찾을 수 없습니다."
-              echo "RELEASE_NOTES_FOUND=false" >> $GITHUB_ENV
-              echo "v$VERSION 업데이트" > final_release_notes.txt
-            fi
           else
-            echo "⚠️ CHANGELOG.json과 CHANGELOG.md 파일이 모두 없습니다."
+            echo "⚠️ CHANGELOG.json 파일이 없습니다. 기본 릴리즈 노트를 사용합니다."
             echo "RELEASE_NOTES_FOUND=false" >> $GITHUB_ENV
             echo "v$VERSION 업데이트" > final_release_notes.txt
           fi
@@ -443,7 +420,7 @@ jobs:
         if: success()
         run: |
           echo "✅ TestFlight 업로드 성공!"
-          echo "버전: ${{ needs.prepare-build.outputs.current_version }}"
+          echo "버전: ${{ needs.prepare-build.outputs.version }}"
           echo "커밋: ${{ github.sha }}"
 
       - name: Notify on Failure
