--- a/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
@@ -20,7 +20,7 @@ jobs:
     runs-on: macos-15
     # CHANGELOG 워크플로우가 성공한 경우에만 실행
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name != 'workflow_run' }}
-    
+
     outputs:
       version: ${{ steps.current_version.outputs.version }}
       build_number: ${{ steps.current_version.outputs.build_number }}
@@ -95,7 +95,7 @@ jobs:
           # 버전 관리 스크립트로 버전 정보 가져오기
           VERSION=$(./.github/scripts/version-manager.sh get | tail -n 1)
           echo "📋 버전 정보: $VERSION"
-          
+
           # Flutter 버전이 x.x.x+y 형식인지 확인하고, 없다면 빌드 번호를 별도로 관리
           if [[ "$VERSION" == *"+"* ]]; then
             # 기존 x.x.x+y 형식에서 빌드 번호 추출
@@ -114,15 +114,15 @@ jobs:
             # CI 환경이 아닌 경우 타임스탬프로 대체
             BUILD_NUMBER=$(date +%s)
           fi
-          
+
           # 결과 출력
           echo "version=$BUILD_VERSION" >> $GITHUB_OUTPUT
           echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
           echo "project_type=${{ env.PROJECT_TYPE }}" >> $GITHUB_OUTPUT
-          
+
           echo "📋 현재 버전: $BUILD_VERSION (빌드번호: $BUILD_NUMBER)"
           echo "🔧 프로젝트 타입: ${{ env.PROJECT_TYPE }}"
-          
+
           # 환경변수로도 설정 (스크립트에서 사용)
           echo "VERSION=$BUILD_VERSION" >> $GITHUB_ENV
           echo "TODAY=$(date '+%Y-%m-%d')" >> $GITHUB_ENV
@@ -135,7 +135,7 @@ jobs:
         id: release_notes
         run: |
           VERSION="${{ steps.current_version.outputs.version }}"
-          
+
           if [ -f "CHANGELOG.json" ]; then
             echo "📄 CHANGELOG.json에서 v$VERSION 릴리즈 노트 추출 중..."
             
@@ -189,7 +189,7 @@ jobs:
     name: iOS 앱 빌드
     runs-on: macos-15
     needs: prepare-build
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -284,6 +284,13 @@ jobs:
           </plist>
           EOF
 
+      # Ensure pod scripts are executable
+      - name: Ensure pod scripts are executable
+        run: |
+          if [ -d ios/Pods ]; then
+            find ios/Pods -name "*.sh" -print0 | xargs -0 chmod +x
+          fi
+
       # Flutter build (no codesign) to generate Xcode project artifacts
       - name: Flutter build (no codesign)
         run: |
@@ -325,7 +332,7 @@ jobs:
     name: TestFlight 배포
     runs-on: macos-15
     needs: [prepare-build, build-ios]
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -392,14 +399,14 @@ jobs:
           # 절대 경로로 IPA 파일 찾기
           IPA_PATH=$(find $GITHUB_WORKSPACE/ios/build/ipa -name "*.ipa" | head -1)
           echo "Found IPA at: $IPA_PATH"
-          
+
           if [ ! -f "$IPA_PATH" ]; then
             echo "❌ IPA 파일을 찾을 수 없습니다!"
             echo "빌드 디렉토리 내용:"
             ls -la ios/build/ipa/
             exit 1
           fi
-          
+
           # Release notes 준비
           if [ -f "final_release_notes.txt" ]; then
             RELEASE_NOTES=$(cat final_release_notes.txt)
@@ -409,19 +416,19 @@ jobs:
             RELEASE_NOTES="v${{ needs.prepare-build.outputs.version }} 업데이트"
             echo "기본 Release Notes로 업로드: $RELEASE_NOTES"
           fi
-          
+
           # 환경변수 설정
           export APP_STORE_CONNECT_API_KEY_ID="${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}"
           export APP_STORE_CONNECT_ISSUER_ID="${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}"
           export API_KEY_PATH="$HOME/.appstoreconnect/private_keys/AuthKey_${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}.p8"
           export IPA_PATH="$IPA_PATH"
           export RELEASE_NOTES="$RELEASE_NOTES"
-          
+
           # 디버깅 정보
           echo "Working directory: $(pwd)"
           echo "IPA_PATH: $IPA_PATH"
           echo "API_KEY_PATH: $API_KEY_PATH"
-          
+
           # Fastlane 실행 (권한 에러는 무시하고 성공 처리)
           cd ios
           fastlane upload_testflight || echo "⚠️ 권한 에러 발생했지만 업로드는 성공적으로 완료됨"
