--- a/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
@@ -85,8 +85,7 @@ jobs:
       - name: 버전 관리 스크립트 권한 설정
         run: |
           chmod +x ./.github/scripts/version_manager.sh
-          chmod +x ./.github/scripts/changelog_parser.py
-          chmod +x ./.github/scripts/changelog_generator.py
+          chmod +x ./.github/scripts/changelog_manager.py
 
       # version_manager.sh를 사용하여 현재 버전 정보 가져오기
       - name: 현재 버전 정보 가져오기
@@ -138,13 +137,12 @@ jobs:
 
           if [ -f "CHANGELOG.json" ]; then
             echo "📄 CHANGELOG.json에서 v$VERSION 릴리즈 노트 추출 중..."
-            
-            # 체인지로그 생성기 실행
-            python3 ./.github/scripts/changelog_generator.py
-            
-            # 현재 버전에 해당하는 부분만 추출하여 릴리즈 노트 생성
-            sed -n "/## \[$VERSION\]/,/---/p" CHANGELOG.md | sed '$d' > final_release_notes.txt
-            
+            # CHANGELOG.md 생성
+            python3 ./.github/scripts/changelog_manager.py generate-md
+
+            # changelog_manager.py export로 릴리즈 노트 추출
+            python3 ./.github/scripts/changelog_manager.py export --version $VERSION --output final_release_notes.txt
+
             if [ -s final_release_notes.txt ]; then
               echo "✅ 릴리즈 노트 추출 성공!"
               echo "📋 추출된 릴리즈 노트:"
