이슈 생성시 자동 브랜치커밋메시지 가이드 로직 추가 : fix : flutter 버전업데이트 안되는 문제 수정 https://github.com/TEAM-ROMROM/RomRom-FE/issues/213

--- a/version.yml
+++ b/version.yml
@@ -22,7 +22,7 @@
 # - https://github.com/Cassiiopeia/suh-github-template
 # ===================================================================
 
-version: "1.1.31"
+version: "1.1.32"
 project_type: "flutter" # spring, flutter, react, react-native, react-native-expo, node, template 등
 version_file: "version.yml" # 버전 정보가 저장된 파일 경로
 # 프로젝트 타입별 버전 파일 매핑
@@ -56,10 +56,10 @@ project_configs:
   template:
     version_file: "version.yml"
     version_pattern: "version: "
-    version_format: 'version: "1.2.2"'
+    version_format: 'version: "1.1.32"'
 # 메타데이터
 metadata:
-  last_updated: "2025-08-10 06:36:23"
-  last_updated_by: "Cassiiopeia"
+  last_updated: "2025-08-17 16:31:50"
+  last_updated_by: "cassiiopeia"
   auto_increment: true # patch 버전 자동 증가 여부
   changelog_enabled: true # 체인지로그 자동 생성 여부
