--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shadex: ^1.0.2
   shared_preferences: ^2.5.2
   skeletonizer: ^1.4.3
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
