카드 드래그 후 거래요청 보내기 화면 추가 : feat : 카드 drop zone 영역 ui 수정 https://github.com/TEAM-ROMROM/RomRom-FE/issues/255

--- a/lib/icons/config.json
+++ b/lib/icons/config.json
@@ -229,6 +229,20 @@
       "search": [
         "onboardingprogresscheck"
       ]
+    },
+    {
+      "uid": "e1b114d6e309e81144b1d9cc664c3895",
+      "css": "cardDrag",
+      "code": 59393,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M1034.5 538.6C1052.6 557.7 1051.8 587.8 1032.8 605.9 1013.7 624 983.6 623.3 965.5 604.2L547.6 164.3 129.7 604.2C111.6 623.3 81.5 624 62.4 605.9 43.4 587.8 42.6 557.7 60.7 538.6L513.1 62.5C522.1 53 534.6 47.6 547.6 47.6 560.7 47.6 573.1 53 582.1 62.5L1034.5 538.6ZM1034.5 824.4C1052.6 843.4 1051.8 873.5 1032.8 891.6 1013.7 909.8 983.6 909 965.5 889.9L547.6 450.1 129.7 889.9C111.6 909 81.5 909.8 62.4 891.6 43.4 873.5 42.6 843.4 60.7 824.4L513.1 348.2C522.1 338.7 534.6 333.3 547.6 333.3 560.7 333.3 573.1 338.7 582.1 348.2L1034.5 824.4Z",
+        "width": 1095
+      },
+      "search": [
+        "card-drag"
+      ]
     }
   ]
 }
