--- a/.github/workflows/ROMROM-ANDROID-PR-BUILD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-PR-BUILD.yaml
@@ -3,7 +3,7 @@ name: 프로젝트 빌드 테스트
 on:
   pull_request:
     branches: ["main"]
-  workflow_dispatch:  # 수동 실행 옵션 추가
+  workflow_dispatch: # 수동 실행 옵션 추가
 
 # PR 댓글을 위한 권한 추가
 permissions:
@@ -32,7 +32,7 @@ jobs:
         run: |
           mkdir -p android/app/keystore
           echo "${{ secrets.KEYSTORE_FILE }}" | base64 -d > android/app/keystore/key.jks
-          
+
           echo "storeFile=keystore/key.jks" > android/key.properties
           echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
@@ -92,16 +92,19 @@ jobs:
         uses: android-actions/setup-android@v3
 
       - name: 코드 분석 실행
-        id: flutter-analyze
         run: |
-          # 결과를 파일로 저장
-          flutter analyze > flutter_analyze_output.txt 2>&1 || {
-            echo "FLUTTER_ANALYZE_FAILED=true" >> $GITHUB_ENV
-            echo "FLUTTER_ANALYZE_OUTPUT<<EOF" >> $GITHUB_ENV
-            cat flutter_analyze_output.txt >> $GITHUB_ENV
-            echo "EOF" >> $GITHUB_ENV
-            exit 1
-          }
+          set -o pipefail
+          flutter analyze > flutter_analyze_output.txt 2>&1 || exit 1
+          echo "====== FLUTTER ANALYZE RESULT ======"
+          cat flutter_analyze_output.txt
+          echo "===================================="
+
+      - name: Upload analyze log
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: flutter-analyze-log
+          path: flutter_analyze_output.txt
 
       - name: APK 빌드
         id: build-apk
@@ -123,7 +126,7 @@ jobs:
             echo "BUILD_CHECK_ERROR=빌드 결과물 디렉토리가 존재하지 않습니다!" >> $GITHUB_ENV
             exit 1
           fi
-          
+
           if [ ! -f "build/app/outputs/flutter-apk/app-debug.apk" ]; then
             echo "BUILD_CHECK_FAILED=true" >> $GITHUB_ENV
             echo "BUILD_CHECK_ERROR=APK 파일이 생성되지 않았습니다!" >> $GITHUB_ENV
@@ -152,12 +155,12 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const analyzeOutput = process.env.FLUTTER_ANALYZE_OUTPUT;
-            
+
             // 에러 메시지에서 중요한 부분 추출
             const errorLines = analyzeOutput.split('\n')
               .filter(line => line.includes('error') || line.includes('warning') || line.includes('issue found'))
               .join('\n');
-            
+
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
@@ -181,7 +184,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const buildOutput = process.env.FLUTTER_BUILD_OUTPUT;
-            
+
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
@@ -205,7 +208,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const error = process.env.BUILD_CHECK_ERROR;
-            
+
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
@@ -228,7 +231,7 @@ jobs:
           script: |
             // 실패한 단계 찾기
             let failedStep = '알 수 없는 단계';
-            
+
             if ('${{ steps.checkout.outcome }}' === 'failure') failedStep = '소스코드 체크아웃';
             else if ('${{ steps.create-env.outcome }}' === 'failure') failedStep = '환경 변수 파일 생성';
             else if ('${{ steps.setup-keystore.outcome }}' === 'failure') failedStep = '키스토어 설정';
@@ -238,7 +241,7 @@ jobs:
             else if ('${{ steps.setup-gradle.outcome }}' === 'failure') failedStep = 'Gradle 설정';
             else if ('${{ steps.setup-java.outcome }}' === 'failure') failedStep = 'Java 설정';
             else if ('${{ steps.setup-android.outcome }}' === 'failure') failedStep = 'Android SDK 설정';
-            
+
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
